
        CHANGES IN spatstat VERSION 1.45-0.020

OVERVIEW

    o We thank Sven Wagner for contributions.

    o Recursive-partition point process models.

    o Minkowski sum, morphological dilation and erosion with any shape.

    o Important bug fix in spatial CDF tests.

    o More bug fixes for replicated patterns.

    o Summary functions recognise correction="all"

    o Leverage and influence code handles bigger datasets.

    o More support for pixel images.

    o spatstat now Depends on the package 'rpart'

    o Version nickname: 'Poisson d'Avril'

NEW FUNCTIONS

    o as.im.data.frame
    Build a pixel image from a data frame of coordinates and pixel values.

    o covering
    Cover a window using discs of a given radius.

    o dilationAny, erosionAny, %-%
    Morphological dilation and erosion by any shape.

    o kernel.moment
    Moment or incomplete moment of smoothing kernel.

    o MinkowskiSum, %+%
    Minkowski sum of two windows: A %+% B, or MinkowskiSum(A,B)

    o parameters.interact, parameters.fii
    Extract parameters from interpoint interactions.
    [These existing functions are now documented.]

    o ppmInfluence
    Calculate leverage.ppm, influence.ppm and dfbetas.ppm efficiently.

    o rppm, plot.rppm, predict.rppm, prune.rppm
    Recursive-partition point process models

    o update.interact
    Update the parameters of an interpoint interaction.
    [This existing function is now documented.]

    o where.max, where.min
    Find the spatial location(s) where a pixel image achieves its
    maximum or minimum value.

SIGNIFICANT USER-VISIBLE CHANGES

    o leverage.ppm, influence.ppm, dfbetas.ppm
    For Gibbs models, memory usage has been dramatically reduced, 
    so the code can handle larger datasets and finer quadrature schemes.

    o plot.im
    Now handles complex-valued images.

    o connected.im
    Now handles a logical-valued image properly.

    o connected.im, connected.owin