@@ -1,6 +1,6 @@
 Package: spatstat
 Version: 1.45-0.020
-Nickname: Poisson d'Avril
+Nickname: Djeran
 Date: 2016-04-01
 Title: Spatial Point Pattern Analysis, Model-Fitting, Simulation, Tests
 Author: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>,
