@@ -2277,6 +2277,7 @@ export("simulate.detpointprocfamily")
 export("simulate.dppm")
 export("simulate.kppm")
 export("simulate.lppm")
+export("simulate.mppm")
 export("simulate.ppm")
 export("simulate.profilepl")
 export("simulate.slrm")
@@ -3542,6 +3543,7 @@ S3method("sidelengths", "boxx")
   S3method("simulate", "dppm")
   S3method("simulate", "kppm")
   S3method("simulate", "lppm")
+  S3method("simulate", "mppm")
   S3method("simulate", "ppm")
 S3method("simulate", "profilepl")
   S3method("simulate", "slrm")
